# DevOps-Security

./: Dockerfile
.github/: job1Example.yaml
.github/workflows/: build.yaml  job1Example.yaml
content/: app.py  pyproject.toml  quoter_templates.py
kubernetes/: deployment.yaml
