[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Saxion"]

[tool.poetry.dependencies]
python = "^3.12"  # Updated to match the Docker image
flask = "^2.3"  # Latest version of Flask as of now
markupsafe = "^2.1"  # Latest version of MarkupSafe as of now

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.6.0"]  # Update to the latest version of Poetry
build-backend = "poetry.masonry.api"
